--- a/admin/src/style/Login.less
+++ b/admin/src/style/Login.less
@@ -2,6 +2,7 @@
 
 .login {
   height: 100%;
+  background-color: #40a9ff;
 }
 
 .login-input {
@@ -9,7 +10,7 @@
 }
 
 .card-box {
-  .bd-rs4;
+  font-size: 16px;
 }
 
 body {
