--- a/admin/src/style/AdminIndex.less
+++ b/admin/src/style/AdminIndex.less
@@ -9,7 +9,6 @@
 }
 
 .header {
-  transition: left 0.2s;
   width: 100%;
   background-color: #fff;
   padding: 0;
@@ -32,6 +31,7 @@
   height: 100vh;
   position: fixed;
   left: 0;
+  overflow: hidden;
 }
 
 .layout {
